# openapi_rocketapi

./: Cargo.toml
src/v3_0/: schema.rs
