[package]
name = "openapi_rocketapi"
version = "0.1.5"
authors = ["kristoffer <kristoffer.odmark90@gmail.com>", "softprops <d.tangren@gmail.com>"]
description = "Rust bindings for openapi schemas"
repository = "https://github.com/totalkrill/openapi_rocketapi"
keywords = ["openapi", "swagger"]
license = "MIT"
edition = "2018"

[dependencies]
error-chain = "0.10"
failure = "0.1"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
url_serde = "0.2"

[dev-dependencies]
pretty_assertions = "0.5"
